--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mint-ui": "^2.2.13",
+    "node-sass": "^4.12.0",
+    "s": "^0.1.1",
     "sass-loader": "^7.2.0",
     "url-loader": "^2.1.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.1"
