--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.2",
     "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1",
     "webpack": "^4.39.1"
   }
 }
